Poca cosa subir a riba

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".Llistat"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
